mypod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod2
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: myctn2   
    image: nginx
    resources:
      limits:
        cpu: 500m
        memory: 128Mi
      requests:
        cpu: 250m
        memory: 64Mi
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: myvol2
      mountPath: /usr/share/nginx/html
  volumes:
    - name: myvol2
      persistentVolumeClaim:
        claimName: dev1-pvc
